--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-./home/str420/VSC/FastAPI/app/routers/__pycache__
-./home/str420/VSC/FastAPI/__pycache__
-./home/str420/VSC/FastAPI/venv
+__pycache__
+app/__pycache__
+app/routers/__pycache__/
+venv/
+.env
