--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -9,5 +9,13 @@ jobs:
     steps:
       - name: Pull Git Repo
         uses: actions/checkout@v2
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with: 
+          python-version: 3.8
+      - name: Upgrade pip
+        run: python3 -m install --upgrade pip
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
       - name: Test
-        run: Pytest
+        run: pytest
