--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -14,7 +14,7 @@ jobs:
         with: 
           python-version: 3.8
       - name: Upgrade pip
-        run: python3 -m install --upgrade pip
+        run: python3 -m pip install --upgrade pip
       - name: Install Dependencies
         run: pip install -r requirements.txt
       - name: Test
