--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -6,6 +6,7 @@ on:
 jobs:
   job1:
     env:
+      DATABASE_HOSTNAME: localhost
       DATABASE_PORT: 8000
       DATABASE_NAME: fastapi
       DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
