--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -7,8 +7,8 @@ jobs:
   job1:
     env:
       DATABASE_HOSTNAME: localhost
-      DATABASE_PORT: 5432
-      DATABASE_NAME: fastapi
+      DATABASE_PORT: 8000
+      DATABASE_NAME: fastapi_test
       DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
       DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
