--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -33,13 +33,37 @@ jobs:
     steps:
       - name: Pull Git Repo
         uses: actions/checkout@v2
+      
       - name: Install Python
         uses: actions/setup-python@v2
         with: 
           python-version: 3.8
+      
       - name: Upgrade pip
         run: python3 -m pip install --upgrade pip
+      
       - name: Install Dependencies
         run: pip install -r requirements.txt
+      
       - name: Test
         run: pytest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_template:v1
+          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_template:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/fastapi_template:buildcache,mode=max
